<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="io.github.xuefeng_huang.chafia.MainActivity">

    <android.support.v7.widget.CardView
        card_view:cardElevation="4dp"
        card_view:cardBackgroundColor="@color/cardBackground"
        card_view:cardCornerRadius="8dp"
        style="@style/cardStyle">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                style="@style/titleStyle"
                android:text="KOPI KOSONG >"
                android:onClick="kopiKosongClick"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kopiKosong"
                style="@style/descriptionStyle"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        card_view:cardElevation="4dp"
        card_view:cardBackgroundColor="@color/cardBackground"
        card_view:cardCornerRadius="8dp"
        android:layout_marginTop="8dp"
        style="@style/cardStyle">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                style="@style/titleStyle"
                android:text="KOPI O >"
                android:onClick="kopiOClick"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kopiO"
                style="@style/descriptionStyle"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        card_view:cardElevation="4dp"
        card_view:cardBackgroundColor="@color/cardBackground"
        card_view:cardCornerRadius="8dp"
        android:layout_marginTop="8dp"
        style="@style/cardStyle">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                style="@style/titleStyle"
                android:text="KOPI O SIEW DAI >"
                android:onClick="kopiOSiewDaiClick"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kopiOSiewDai"
                style="@style/descriptionStyle"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        card_view:cardElevation="4dp"
        card_view:cardBackgroundColor="@color/cardBackground"
        card_view:cardCornerRadius="8dp"
        android:layout_marginTop="8dp"
        style="@style/cardStyle">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                style="@style/titleStyle"
                android:text="KOPI >"
                android:onClick="kopiClick"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kopi"
                style="@style/descriptionStyle"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        card_view:cardElevation="4dp"
        card_view:cardBackgroundColor="@color/cardBackground"
        card_view:cardCornerRadius="8dp"
        android:layout_marginTop="8dp"
        style="@style/cardStyle">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                style="@style/titleStyle"
                android:text="KOPI GAH DAI >"
                android:onClick="kopiGahDaiClick"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kopiGahDai"
                style="@style/descriptionStyle"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/learnMore"
        android:textColor="@color/learnMoreColor"
        android:onClick="learnMoreClick"/>


    </LinearLayout>
</ScrollView>